--- a/package.json
+++ b/package.json
@@ -69,8 +69,10 @@
     "glue": "^2.2.0",
     "good": "^6.3.0",
     "good-console": "^5.0.3",
+    "h2o2": "^4.0.1",
     "hapi": "^9.1.0",
     "http-proxy": "^1.11.1",
+    "inert": "^3.0.1",
     "lru-memoize": "0.0.2",
     "map-props": "^0.1.1",
     "piping": "0.2.0",
@@ -88,7 +90,7 @@
     "serve-static": "^1.10.0",
     "superagent": "^1.2.0",
     "url-loader": "^0.5.6",
-    "webpack-isomorphic-tools": "^0.8.1"
+    "webpack-isomorphic-tools": "^0.8.5"
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
@@ -114,6 +116,8 @@
     "karma-mocha-reporter": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.7.0",
+    "less": "^2.5.1",
+    "less-loader": "^2.2.0",
     "mocha": "^2.2.5",
     "node-sass": "^3.2.0",
     "react-a11y": "0.2.6",
