--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "h2o2": "^4.0.1",
     "hapi": "^9.1.0",
     "http-proxy": "^1.11.1",
+    "immutable": "^3.7.5",
     "inert": "^3.0.1",
     "lru-memoize": "0.0.2",
     "map-props": "^0.1.1",
@@ -81,9 +82,9 @@
     "react": "0.13.3",
     "react-document-meta": "^0.1.4",
     "react-inline-css": "1.2.1",
-    "react-redux": "0.9.0",
+    "react-redux": "^2.0.0",
     "react-router": "v1.0.0-beta3",
-    "redux": "^1.0.1",
+    "redux": "^2.0.0",
     "redux-form": "^0.5.0",
     "serialize-javascript": "^1.0.0",
     "serve-favicon": "^2.3.0",
@@ -121,8 +122,8 @@
     "mocha": "^2.2.5",
     "node-sass": "^3.2.0",
     "react-a11y": "0.2.6",
-    "react-hot-loader": "1.2.8",
-    "redux-devtools": "1.0.2",
+    "react-hot-loader": "1.3.0",
+    "redux-devtools": "^2.0.0",
     "sass-loader": "^2.0.0",
     "strip-loader": "^0.1.0",
     "style-loader": "^0.12.3",
