--- a/package.json
+++ b/package.json
@@ -69,11 +69,13 @@
     "glue": "^2.2.0",
     "good": "^6.3.0",
     "good-console": "^5.0.3",
+    "gsap": "^1.18.0",
     "h2o2": "^4.0.1",
     "hapi": "^9.1.0",
     "http-proxy": "^1.11.1",
     "immutable": "^3.7.5",
     "inert": "^3.0.1",
+    "invariant": "^2.1.0",
     "lru-memoize": "0.0.2",
     "map-props": "^0.1.1",
     "piping": "0.2.0",
